# Intervox

./: .gitignore  Notes.rtf  README.md  Todo.rtf  build.gradle  generate_java_headers.sh  null  pom.xml  settings.gradle
IntervoxLib/: GLMain.cpp  IntervoxHeadlessVulkan.cpp  IntervoxHeadlessVulkan.hpp  JNICommon.cpp  MoltenVK  VulkanPipeline.cpp  VulkanPipeline.hpp  com_brazedblue_intervox_view3D_OpenGLJNI.h  conanbuildinfo.xcconfig  headless.ppm  renderheadless.cpp  saved_intevox.ppm
IntervoxLib.xcodeproj/: project.pbxproj
Todo.rtfd/: TXT.rtf
buildConfigurations/: Original(default).cfg
data/: DICMDict.txt
src/: Intervox.sh
src/main/native/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GLMain.cpp  IntervoxHeadlessVulkan.cpp  IntervoxHeadlessVulkan.hpp  JNICommon.cpp  JNICommon.h  NativeOpenGL.h  Notes.rtf  com_brazedblue_intervox_view3D_OpenGLJNI.h  conan_config.xcconfig  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.py  conanrun.sh  conanrunenv-release-x86_64.sh  conantoolchain.xcconfig  conantoolchain_release_x86_64.xcconfig  deactivate_conanbuild.sh  deactivate_conanrun.sh  headless_debug.xcconfig  renderheadless.cpp  renderheadless_objc.mm  vcpkg.json
src/main/native/IntervoxLib.xcodeproj/: project.pbxproj
src/main/native/IntervoxLib.xcodeproj/xcshareddata/xcschemes/: IntervoxLib.xcscheme
src/main/native/base/: VulkanDebug.cpp  VulkanTools.cpp  camera.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
src/main/native/data/shaders/glsl/gears/: gears.vert  gears.vert.spv
src/main/native/data/shaders/glsl/mesh/: mesh.vert
src/main/native/extensions/: VulkanContext.cpp  VulkanContext.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanMeshPipeline.cpp  VulkanMeshPipeline.hpp  VulkanPipeline.hpp
src/main/native/gears/: vulkangear.h
src/main/native/source/: C3DMesh.cpp  C3DMesh.h  CGLFiducials.cpp  CGLFiducials.h  CGLMesh.cpp  CGLMesh.h  CGLMeshHolder.cpp  CGLMeshHolder.h  CGLMeshRenderer.cpp  CGLMeshRenderer.h  CGLObject.cpp  CGLObject.h  CGLPerspective.cpp  CGLPerspective.h  CGLPointer.cpp  CGLPointer.h  CGLRenderable.cpp  CGLRenderable.h  CGLTexFont.cpp  CGLTexFont.h  COpenGLContext.cpp  COpenGLContext.h  CVulkanContext.cpp  CVulkanContext.h  GLMain.cpp  JNICommon.h  NativeOpenGL.h  neurosynch_view3D_OpenGLJNI.h
src/main/native/source/Vulkan/: VulkanOffscreenRenderer.cpp  VulkanOffscreenRenderer.hpp  VulkanTools.cpp  VulkanTools.h  vulkanexamplebase.h
src/main/native/source/utility/: C3DPoint.cpp  C3DPoint.h  CCubeMarcher.cpp  CCubeMarcher.h  CJavaArrSlicesSet.h  CMyError.cpp  CMyError.h  CTempMemPointer.h  CTriangle.cpp  CTriangle.h  CTriangleList.cpp  CTriangleList.h  CVertex.cpp  CVertex.h  CVertexList.cpp  CVertexList.h  MyHeader.h  Native.h
src/main/native/utility/: C3DFloatPoint.cpp  C3DFloatPoint.h  C3DPoint.cpp  C3DPoint.h  CCubeMarcher.cpp  CCubeMarcher.h  CFacetLookup.cpp  CFacetLookup.h  CJavaArrSlicesSet.cpp  CJavaArrSlicesSet.h  CMyError.cpp  CMyError.h  CMySortedList.cpp  CMySortedList.h  CSlicesSet.cpp  CSlicesSet.h  CTempMemPointer.cpp  CTempMemPointer.h  CTriangle.cpp  CTriangle.h  CTriangleList.cpp  CTriangleList.h  CVertex.cpp  CVertex.h  CVertexList.cpp  CVertexList.h
(+262 files in other folders)
